--- a/layout/gopy.html
+++ b/layout/gopy.html
@@ -37,7 +37,7 @@
                     </li>
                     <li class="nav-item d-flex justify-content-between align-items-center mx-2">
                         <i class="fs-4 mx-1 bi bi-envelope-fill"></i>
-                        <a class="nav-link active" href="gopy.html">Góp ý</a>
+                        <a class="nav-link active" href="#">Góp ý</a>
                     </li>
                     <li class="nav-item d-flex justify-content-between align-items-center mx-2">
                         <i class="fs-4 mx-1 bi bi-chat-text-fill"></i>
@@ -79,23 +79,7 @@
         <div class="container my-5 ">
 
                 <div class="row">
-                  <div class="col-sm-5 col-md-6">
-                    <div class="col-md-6">
                 
-                        <h3 class="font-title">ĐỊA CHỈ SHOP:</h3>
-                        <h3 class="font-title">Cs 1 HÀ NỘI</h3>
-                        <p class="font-title">Tầng 4 – 161 Chùa Láng, Đống Đa, Hà Nội</p>
-                        <p>Giờ làm việc: 8:30 – 21:00</p>
-                        <p>Hotline: 0987654321 (Zalo) và 0123456789</p>
-                    </div>
-                    <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
-                        <h3 class="font-title">Cs 2 Sài Gòn:</h3>
-                        <p>150/37 Đặng Văn Ngữ, P.13, Phú Nhuận, Hcm</p>
-                        <p>Giờ làm việc: 9:00 – 22:00 tối</p>
-                        <p>Hotline: 0961.055.755</p>
-                        <p><a class="btn btn-style-link btn-color-white" href="https://www.facebook.com/shopgiayrep11hn/" target="_blank" rel="nofollow noopener noreferrer" data-wpel-link="external">Liên hệ qua fanpage</a></p>   
-                     </div>
-                    <!-- </div>
                   <div class="col-sm-5 offset-sm-2 col-md-6 offset-md-0">
                     <div class="input-group mb-3">
                         <span class="input-group-text" id="basic-addon1">Họ và tên</span>
@@ -120,8 +104,8 @@
                       <div class="d-grid gap-2">
                         <button class="btn btn-primary" type="" style="background-color: black; margin-top: 20px;">Gửi thông tin</button>
                       </div>
-                  </div> -->
-                </div> -->
+                  </div>
+                </div>
         </div>
 
         <footer class="container-fluid text-center text-lg-start bg-dark text-white ">
