--- a/layout/index.html
+++ b/layout/index.html
@@ -37,7 +37,7 @@
                     </li>
                     <li class="nav-item d-flex justify-content-between align-items-center mx-2">
                         <i class="fs-4 mx-1 bi bi-envelope-fill"></i>
-                        <a class="nav-link active" href="#">Góp ý</a>
+                        <a class="nav-link active" href="gopy.html">Góp ý</a>
                     </li>
                     <li class="nav-item d-flex justify-content-between align-items-center mx-2">
                         <i class="fs-4 mx-1 bi bi-chat-text-fill"></i>
@@ -83,42 +83,42 @@
 
                     <div class="row text-center">
                         <div class="col-lg-4">
-                            <img src="images/adidas-adiFOM-Superstar-Black-White-800x600.jpg" width="100%" alt="" class="img-item">
-                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">Giày Adidas Adifom Superstar ‘Black White’ Like Auth</a>
+                            <img src="https://picsum.photos/200/300" width="100%" alt="" class="img-item">
+                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">quang</a>
                             </p>
-                            <span class="price text-danger fw-bold">798.000 ₫</span>
+                            <span class="price text-danger fw-bold">1.000 đ</span>
                         </div>
                         <div class="col-lg-4">
-                            <img src="images/giay-gucci-screener-black-white-leather-800x600.jpg" alt=""  width="100%" class="img-item">
-                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">Giày Gucci Screener Black White Leather Like Auth </a>
+                            <img src="https://picsum.photos/200/300" alt=""  width="100%" class="img-item">
+                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">quang</a>
                             </p>
-                            <span class="price text-danger fw-bold">2.690.000 ₫</span>
+                            <span class="price text-danger fw-bold">1.000 đ</span>
                         </div>
                         <div class="col-lg-4">
-                            <img src="images/giay-mlb-chunky-liner-mid-classic-monogram-boston-Beige-800x601.jpg"  width="100%" alt="" class="img-item">
-                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">Giày MLB Chunky Liner Mid Classic Monogram Boston Red Sox L.Beige Like Auth</a>
+                            <img src="https://picsum.photos/200/300"  width="100%" alt="" class="img-item">
+                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">quang</a>
                             </p>
-                            <span class="price text-danger fw-bold">990.000 ₫</span>
+                            <span class="price text-danger fw-bold">1.000 đ</span>
                         </div>
                     </div>
                     <div class="row text-center my-5">
                         <div class="col-lg-4">
-                            <img src="images/Nike-Air-Force-1-Low-Panda-Like-Auth-800x600.jpg" width="100%" alt="" class="img-item">
-                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">Giày Nike Air Force 1 Low ‘Panda’ Like Auth</a>
+                            <img src="https://picsum.photos/200/300" width="100%" alt="" class="img-item">
+                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">quang</a>
                             </p>
-                            <span class="price text-danger fw-bold">1.090.000 ₫</span>
+                            <span class="price text-danger fw-bold">1.000 đ</span>
                         </div>
                         <div class="col-lg-4">
-                            <img src="images/Jordan-1-Retro-High-OG-Hyper-Royal-800x600.jpg" width="100%" alt="" class="img-item">
-                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">Giày Nike Air Jordan 1 Retro High OG Hyper Royal Like Auth </a>
+                            <img src="https://picsum.photos/200/300" width="100%" alt="" class="img-item">
+                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">quang</a>
                             </p>
-                            <span class="price text-danger fw-bold">1.490.000 đ</span>
+                            <span class="price text-danger fw-bold">1.000 đ</span>
                         </div>
                         <div class="col-lg-4">
-                            <img src="images/Giay-nike-air-Jordan-4-Retro-Off-White-Sail-replica-800x600.jpg" width="100%" alt="" class="img-item">
-                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">Nike Air Jordan 4 Retro Off-White Sail Like Auth</a>
+                            <img src="https://picsum.photos/200/300" width="100%" alt="" class="img-item">
+                            <p class="title text-primary fw-bold fs-5 my-2"><a href="">quang</a>
                             </p>
-                            <span class="price text-danger fw-bold">1.790.000 đ</span>
+                            <span class="price text-danger fw-bold">1.000 đ</span>
                         </div>
                     </div>
                 </article>
@@ -142,37 +142,37 @@
                                             <ul class="list-group">
                                                 <li
                                                     class="list-group-item d-flex justify-content-between align-items-start">
-                                                    <a href="#" class="text-black ms-2 me-auto">JORDAN</a>
+                                                    <a href="#" class="text-black ms-2 me-auto">aa</a>
                                                     <span class="badge bg-primary rounded-pill">12</span>
                                                 </li>
                                                 <li
                                                     class="list-group-item d-flex justify-content-between align-items-start">
-                                                    <a href="#" class="text-black ms-2 me-auto">GIÀY NIKE</a>
+                                                    <a href="#" class="text-black ms-2 me-auto">bb</a>
                                                     <span class="badge bg-primary rounded-pill">23</span>
                                                 </li>
                                                 <li
                                                     class="list-group-item d-flex justify-content-between align-items-start">
-                                                    <a href="#" class="text-black ms-2 me-auto">ADIDAS</a>
+                                                    <a href="#" class="text-black ms-2 me-auto">cc</a>
                                                     <span class="badge bg-primary rounded-pill">42</span>
                                                 </li>
                                                 <li
                                                     class="list-group-item d-flex justify-content-between align-items-start">
-                                                    <a href="#" class="text-black ms-2 me-auto">NEW BALANCE</a>
+                                                    <a href="#" class="text-black ms-2 me-auto">dd</a>
                                                     <span class="badge bg-primary rounded-pill">21</span>
                                                 </li>
                                                 <li
                                                     class="list-group-item d-flex justify-content-between align-items-start">
-                                                    <a href="#" class="text-black ms-2 me-auto">CONVERSE</a>
+                                                    <a href="#" class="text-black ms-2 me-auto">aa</a>
                                                     <span class="badge bg-primary rounded-pill">21</span>
                                                 </li>
                                                 <li
                                                     class="list-group-item d-flex justify-content-between align-items-start">
-                                                    <a href="#" class="text-black ms-2 me-auto">MLB</a>
+                                                    <a href="#" class="text-black ms-2 me-auto">aa</a>
                                                     <span class="badge bg-primary rounded-pill">21</span>
                                                 </li>
                                                 <li
                                                     class="list-group-item d-flex justify-content-between align-items-start">
-                                                    <a href="#" class="text-black ms-2 me-auto">GIÀY LUXURY</a>
+                                                    <a href="#" class="text-black ms-2 me-auto">aa</a>
                                                     <span class="badge bg-primary rounded-pill">21</span>
                                                 </li>
                                             </ul>
