--- a/layout/gioithieu.html
+++ b/layout/gioithieu.html
@@ -37,7 +37,7 @@
                     </li>
                     <li class="nav-item d-flex justify-content-between align-items-center mx-2">
                         <i class="fs-4 mx-1 bi bi-envelope-fill"></i>
-                        <a class="nav-link active" href="#">Góp ý</a>
+                        <a class="nav-link active" href="gopy.html">Góp ý</a>
                     </li>
                     <li class="nav-item d-flex justify-content-between align-items-center mx-2">
                         <i class="fs-4 mx-1 bi bi-chat-text-fill"></i>
